--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,6 +12,21 @@ div.highlight {
     }
 }
 
+@include mobile {
+    .navbar-item {
+        &.has-dropdown {
+            .navbar-dropdown {
+                display: none;
+            }
+            &.is-active {
+                .navbar-dropdown {
+                display: block;
+            }
+        }
+     }
+  }
+}
+
 .contents {
     box-shadow: $box-shadow;
     padding: 1.5rem;
