docs and gallery

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,7 @@
 ---
 ---
-
+//$primary: #333333;
+$primary: #8c03fc;
+$breadcrumb-item-separator-color: #8c03fc;
 // Import Main CSS file from theme
 @import "main";
