--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,5 +3,6 @@
 //$primary: #333333;
 $primary: #8c03fc;
 $breadcrumb-item-separator-color: #8c03fc;
+$navbar-burger-color: #ffffff;
 // Import Main CSS file from theme
 @import "main";
