--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,9 @@
 //$primary: #333333;
 $primary: #8c03fc;
 $breadcrumb-item-separator-color: #8c03fc;
-$navbar-burger-color: #ffffff;
+
+// DON'T CHANGE. This sets the burger color that only appears on mobile, by default its a weird blue but white is much better
+$navbar-burger-color: #ffffff; 
+
 // Import Main CSS file from theme
 @import "main";
