--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,7 +1,9 @@
 ---
 ---
 //$primary: #333333;
-$primary: #8c03fc;
+
+//Purple is #8c03fc
+$primary: #737373;
 $breadcrumb-item-separator-color: #8c03fc;
 
 // DON'T CHANGE. This sets the burger color that only appears on mobile, by default its a weird blue but white is much better
