--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,8 +1,8 @@
 ---
 ---
-//$primary: #333333;
+$primary: #333333;
 
-$primary: #8c03fc;
+//$primary: #8c03fc;
 $breadcrumb-item-separator-color: #8c03fc;
 
 // DON'T CHANGE. This sets the burger color that only appears on mobile, by default its a weird blue but white is much better
