--- a/_includes/div3d.html
+++ b/_includes/div3d.html
@@ -1,5 +1,5 @@
 <div class="card">
-        <div class="card-image" id="{{ include.id }}">
+        <div class="card-image" id="{{ include.id }}" style="height: 200px; width: 500px;">
         </div>
     <div class="card-content">
         <div class="content">
