--- a/_includes/div3d.html
+++ b/_includes/div3d.html
@@ -1,5 +1,5 @@
 <div class="card">
-        <canvas class="card-image" id="{{ include.id }}" style="height: 200px; width: 500px;">
+        <canvas id="{{ include.id }}" style="height: 200px; width: 500px;">
         </canvas>
     <div class="card-content">
         <div class="content">
