--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,25 +17,7 @@
     >
     <style>
 
-      html,
-
-      body {
-
-        overflow: hidden;
-
-        width: 100%;
-
-        height: 100%;
-
-        margin: 0;
-
-        padding: 0;
-
-      }
-
-
-
-      #renderCanvas {
+      .renderCanvas {
 
         width: 10%;
 
