--- a/_includes/div3d.html
+++ b/_includes/div3d.html
@@ -1,4 +1,4 @@
-<canvas class="card renderCanvas" id="{{ include.id }}" touch-action="none"></canvas>
+<canvas class="card renderCanvas" id="{{ include.id }}" touch-action="none" style="width: 200px; height: 200px;"></canvas>
 
 
 
