--- a/_includes/three.html
+++ b/_includes/three.html
@@ -1,11 +1,12 @@
-<canvas class="renderCanvas" id="{{ include.id }}" touch-action="none" style="width: 200px; height: 200px;"></canvas>
+<canvas class="card" id="renderCanvas{{ include.id }}" touch-action="none" ></canvas>
+
 
 
 
 
 <script>
 
-      const canvas{{ include.id }} = document.getElementById("{{ include.id }}"); // Get the canvas element
+      const canvas{{ include.id }}= document.getElementById("renderCanvas{{ include.id }}"); // Get the canvas element
 
       const engine{{ include.id }} = new BABYLON.Engine(canvas{{ include.id }}, true); // Generate the BABYLON 3D engine
 
@@ -37,7 +38,7 @@
 
 
 
-      const scene{{ include.id }} = createScene(); //Call the createScene function
+      const scene = createScene(); //Call the createScene function
 
 
 
