--- a/_includes/three.html
+++ b/_includes/three.html
@@ -1,4 +1,4 @@
-<canvas class="card" id="renderCanvas{{ include.id }}" touch-action="none" ></canvas>
+<canvas class="renderCanvas card" id="renderCanvas{{ include.id }}" touch-action="none" ></canvas>
 
 
 
