--- a/_includes/three.html
+++ b/_includes/three.html
@@ -38,7 +38,7 @@
 
 
 
-      const scene{{ include.id }} = createScene(); //Call the createScene function
+      const scene{{ include.id }} = createScene{{ include.id }}(); //Call the createScene function
 
 
 
