--- a/_includes/three.html
+++ b/_includes/three.html
@@ -20,8 +20,22 @@
 
 
 
-        BABYLON.MeshBuilder.CreateBox("box", {});
-
+      //  BABYLON.MeshBuilder.CreateBox("box", {});
+        BABYLON.SceneLoader.ImportMesh(
+           undefined, // Name of meshes to load
+           "/assets/models/", // Path on a server for the file
+           "earth.gltf", // The file name that should be loaded from the above path
+            scene{{ include.id }}, // The scene to load this mesh/model file into
+            function (
+		    meshes, 
+		    particleSystems,
+		    skeletons,
+		    animationList
+    ) {
+        // Custom Code to run after Loading has finished
+    }
+);
+	      
 
 
         const camera{{ include.id }} = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
