--- a/_includes/three.html
+++ b/_includes/three.html
@@ -24,7 +24,7 @@
         BABYLON.SceneLoader.ImportMesh(
            undefined, // Name of meshes to load
            "/assets/models/", // Path on a server for the file
-           "earth.gltf", // The file name that should be loaded from the above path
+           "saturn.gltf", // The file name that should be loaded from the above path
             scene{{ include.id }}, // The scene to load this mesh/model file into
             function (
 		    meshes, 
