--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,19 +15,11 @@
             href="{{ site.baseurl }}/favicon.png"
         {% endif %}
     >
-    <style>
+<style>
 
-      .renderCanvas {
-
-        width: 10%;
-
-        height: 10%;
-
-        touch-action: none;
-
-      }
       
-       body {
+
+      body {
 
         overflow: hidden;
 
@@ -36,8 +28,20 @@
         height: 100%;
 
         margin: 0;
-
+        
         padding: 0;
+
+      }
+
+
+
+      .renderCanvas {
+
+        width: 500px;
+        
+        height: 300px;
+        
+        touch-action: none;
 
       }
 
@@ -45,11 +49,12 @@
 
 
 
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+<script src="https://cdn.babylonjs.com/babylon.js"></script>
 
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+<script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 
-    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+<script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+
     <script
         src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"
     ></script>
