--- a/_includes/spoiler.html
+++ b/_includes/spoiler.html
@@ -1,4 +1,4 @@
 <details>
-<summary>{{ include.name }}</summary>
+<summary style="list-style: url(https://github.com/Cosmic-Mod/Cosmic-Mod.github.io/blob/baf47b383b1f038eab675ea822964b509bae2d83/assets/other/fa/shuttle-space.svg)">{{ include.name }}</summary>
         {{ include.content | markdownify}}
 </details>
