--- a/_includes/spoiler.html
+++ b/_includes/spoiler.html
@@ -1,4 +1,4 @@
 <details>
-<summary style="list-style: url('https://cosmic-mod.github.io/assets/other/fa/shuttle-space.svg');">{{ include.name }}</summary>
+<summary>{{ include.name }}</summary>
         {{ include.content | markdownify}}
 </details>
