--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,21 @@
         touch-action: none;
 
       }
+        summary {
+          display: block;
+        }
+
+        /* Create a new custom triangle on the right side */
+        summary::after {
+          margin-left: 1ch;
+          display: inline-block;
+          content: '→';
+          transition: 0.2s;
+        }
+
+        details[open] > summary::after {
+          transform: rotate(90deg);
+        }
 
     </style>
 
