--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
         summary::after {
           margin-left: 1ch;
           display: inline-block;
-          content: '→';
+          content: '';
           transition: 0.2s;
         }
 
