--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,14 +49,15 @@
         }
 
         /* Create a new custom triangle on the right side */
-        summary::after {
+        summary::before {
           margin-left: 1ch;
           display: inline-block;
           content: '';
+          font-family: fa;
           transition: 0.2s;
         }
 
-        details[open] > summary::after {
+        details[open] > summary::before {
           transform: rotate(90deg);
         }
 
