--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     >
 <style>
 
-      @font-face {font-family: fa; src: url('https://github.com/FortAwesome/Font-Awesome/blob/37eff7fa00de26db41183a3ad8ed0e9119fbc44b/webfonts/fa-solid-900.woff2');}
+      @font-face {font-family: fa; src: url('https://github.com/FortAwesome/Font-Awesome/raw/6.x/webfonts/fa-solid-900.woff2');}
 
       body {
 
