--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,7 +50,7 @@
 
         /* Create a new custom triangle on the right side */
         summary::before {
-          margin-left: 1ch;
+          margin-right: 1ch;
           display: inline-block;
           content: '';
           font-family: fa;
