--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
         summary::before {
           margin-right: 1ch;
           display: inline-block;
-          content: '';
+          content: url('https://cosmic-mod.github.io/assets/other/fa/shuttle-space.svg');
           font-family: fa;
           transition: 0.2s;
         }
