--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,6 @@
     >
 <style>
 
-      @font-face {font-family: fa; src: url('https://github.com/FortAwesome/Font-Awesome/raw/6.x/webfonts/fa-solid-900.woff2');}
-
       body {
 
         overflow: hidden;
@@ -52,7 +50,7 @@
         summary::before {
           margin-right: 1ch;
           display: inline-block;
-          content: url('https://cosmic-mod.github.io/assets/other/fa/shuttle-space.svg');
+          content: url('https://cosmic-mod.github.io/assets/other/star.svg');
           font-family: fa;
           transition: 0.2s;
         }
