--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,13 @@
 <head>
-    
+
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="{{ site.theme_color | default: '#ffffff' }}">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/stars.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
     <link
         rel="shortcut icon"
         type="image/png"
@@ -83,11 +85,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-social@1/bin/bulma-social.min.css">
     {% endunless %}
     {% seo %}
-    {% if site.feed %}
-        {% feed_meta %}
-    {% endif %}
+
     {%- if site.google_analytics -%}
         {%- include google-analytics.html -%}
     {%- endif -%}
     {%- include head-scripts.html -%}
 </head>
+
