--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,7 +53,8 @@
           margin-right: 1ch;
           display: inline-block;
           content: url('https://cosmic-mod.github.io/assets/other/star.svg');
-          font-family: fa;
+          class="filter-white"
+          transform: scale(3);
           transition: 0.2s;
         }
 
