--- a/_includes/threejs.html
+++ b/_includes/threejs.html
@@ -56,7 +56,7 @@
  const loader = new GLTFLoader();
 
 // Load the glTF file
- cube = loader.loadAsync('/assets/models/saturn.gltf')
+ cube = loader.loadAsync('https://cosmic-mod.github.io/assets/models/saturn.gltf')
     // Add the loaded scene to the Three.js scene
  scene.add(cube.scene);
  //var cube = new THREE.Mesh(
