--- a/_includes/threejs.html
+++ b/_includes/threejs.html
@@ -8,6 +8,9 @@
   }
 </script>
 
+<script src="node_modules/eruda/eruda.js"></script>
+<script>eruda.init();</script>
+
 <div id="canvas" style="height: 200px; width: 200px;"></div>
 <script>
   // https://discourse.threejs.org/t/how-can-i-put-my-scene-inside-a-html-div/49247
