--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,7 +58,7 @@
         }
 
         details[open] > summary::before {
-          transform: rotate(90deg);
+          transform: rotate(90deg) scale(1.5);
         }
 
     </style>
