--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -26,6 +26,14 @@
                 </span>
             </div>
           {% endif %}
+          <div class="control">
+            <div class="tags has-addons">
+              <span class="tag is-dark is-large">Download:</span>
+              <a href="https://www.curseforge.com/minecraft/mc-mods/cosmic-horizons"class="tag is-large is-danger" style="background: #f16436;"><img height="32" width="32" src="https://cdn.simpleicons.org/curseforge/white" style="margin-right: 10px;"/>Curseforge</a>
+              <a class="tag is-success is-large"><img height="32" width="32" src="https://cdn.simpleicons.org/modrinth/white" style="margin-right: 10px;"/>Modrinth</a>
+            </div>
+          </div>
+          
         </div>
     </div>
 </section>
