--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
 >
     {% include head.html %}
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCFHM38K"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
         {% if site.cookie_policy %}
             {% include cookie-banner.html %}
         {% endif %}
