--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -1,6 +1,6 @@
 <!-- footer scripts -->
 
-
+<script>
 // Code for the planet editor page. NEEDS CLEANING UP, SORRY
 if (document.getElementById("planetCanvas")) {
     // Get elements from the DOM
@@ -198,4 +198,4 @@ if (document.getElementById("planetCanvas")) {
     }
 
 }
-
+</script>
