--- a/_includes/three.html
+++ b/_includes/three.html
@@ -54,9 +54,9 @@
                     
                     
         scene{{ include.id }}.registerBeforeRender(function(){
-		const rotation = mesh.meshes[0].rotationQuaternion.toEulerAngles()
+		const rotation = meshes[0].rotationQuaternion.toEulerAngles()
 		rotation.y += 0.01;
-		mesh.meshes[0].rotationQuaternion = BABYLON.Quaternion.FromEulerVector(rotation)            
+		meshes[0].rotationQuaternion = BABYLON.Quaternion.FromEulerVector(rotation)            
 	});
 
         return scene{{ include.id }};
