--- a/_includes/three.html
+++ b/_includes/three.html
@@ -23,7 +23,7 @@
            "{{ include.path }}", // Path on a server for the file
            "saturn.gltf", // The file name that should be loaded from the above path
             scene{{ include.id }},function (Meshes) {
-		mesh = = Meshes[0];
+		mesh = Meshes[0];
 	    }
          )
 
