--- a/_includes/three.html
+++ b/_includes/three.html
@@ -53,7 +53,7 @@
 		// const rotation = mesh.rotationQuaternion.toEulerAngles()
 		// rotation.y += 0.01;
 		// mesh.rotationQuaternion = BABYLON.Quaternion.FromEulerVector(rotation)
-		console.log(typeof mesh);
+		console.log(mesh.keys());
 	});
 
         return scene{{ include.id }};
